# xgamedev

./: CMakeLists.txt  README  build_all.sh  droid.sh
cmake/: android.cmake  ios.cmake  linux.cmake  lua.cmake  macosx.cmake  mingw.cmake  msvc.cmake  resources.cmake
cmake/Modules/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake
include/: Errors.h  SDL2.h
include/Entities/: Component.h  Entity.h  EntityFactory.h
include/Files/: FileIO.h  Filesystem.h  Xml.h
include/Hardware/: Display.h  Window.h
include/Processes/: Process.h  ProcessManager.h
include/States/: State.h  StateManager.h
setup/: android.sh  build_android.sh  debian.sh  ios.sh  libs.sh  linux.sh  macosx.sh
setup/android/: Android_Lua.mk  XGDTest.java  XGameDev.java  cmake.sh  gmock.sh  lua.sh  ndk.sh  sdl2.sh  toolchain.sh
setup/ios/: cmake.sh  gmock.sh  sdl2.sh
setup/linux/: gmock.sh  lua.sh  sdl2.sh  uninstall.sh
setup/macosx/: gmock.sh  homebrew.sh  lua.sh  sdl2.sh
share/: entity.xml  invalid.xml  noentity.xml  test.xml
share/TDD/: TDD.icns  TDD.idraw  TDD.rc
share/icons/: app.icns  app.rc
src/: Main.cpp
src/Files/: FileIO.cpp  Filesystem.cpp  Xml.cpp
src/Hardware/: Display.cpp  Window.cpp
test/: AppState.cpp  EntityComponentSystem.cpp  Files.cpp  HardwareLayer.cpp  ProcessManagment.cpp  TestMain.cpp  XmlParser.cpp
